--- a/assembly/assembly-wsagent-server/pom.xml
+++ b/assembly/assembly-wsagent-server/pom.xml
@@ -14,13 +14,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>che-assembly-parent</artifactId>
-        <groupId>org.eclipse.che</groupId>
-        <version>5.3.1</version>
+        <artifactId>e2cloud-assembly-parent</artifactId>
+        <groupId>com.renesas.e2cloud</groupId>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>assembly-wsagent-server</artifactId>
     <packaging>pom</packaging>
-    <name>Che Assembly Workspace Agent Server</name>
+    <name>e2cloud Assembly Workspace Agent Server</name>
     <dependencies>
         <dependency>
             <groupId>log4j</groupId>
@@ -31,7 +31,7 @@
             <artifactId>maven-dependency-tree</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.eclipse.che</groupId>
+            <groupId>com.renesas.e2cloud</groupId>
             <artifactId>assembly-wsagent-war</artifactId>
             <type>war</type>
         </dependency>
