--- a/assembly/assembly-wsagent-server/pom.xml
+++ b/assembly/assembly-wsagent-server/pom.xml
@@ -18,13 +18,13 @@
         <groupId>com.renesas.e2cloud</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>assembly-wsagent-server</artifactId>
+    <artifactId>e2cloud-assembly-wsagent-server</artifactId>
     <packaging>pom</packaging>
     <name>e2cloud Assembly Workspace Agent Server</name>
     <dependencies>
         <dependency>
             <groupId>com.renesas.e2cloud</groupId>
-            <artifactId>assembly-wsagent-war</artifactId>
+            <artifactId>e2cloud-assembly-wsagent-war</artifactId>
             <type>war</type>
         </dependency>
         <dependency>
