--- a/assembly/assembly-wsmaster-war/pom.xml
+++ b/assembly/assembly-wsmaster-war/pom.xml
@@ -18,7 +18,7 @@
         <groupId>com.renesas.e2cloud</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>assembly-wsmaster-war</artifactId>
+    <artifactId>e2cloud-assembly-wsmaster-war</artifactId>
     <packaging>war</packaging>
     <name>e2studio IDE :: Compiling WS Master WAR</name>
     <properties>
