--- a/dockerfiles/init/manifests/e2cloud.env
+++ b/dockerfiles/init/manifests/e2cloud.env
@@ -1,24 +1,24 @@
 ########################################################################################
 #####                                                                              #####
-#####                                    ARTIK SYSTEM                              #####
+#####                                   E2CLOUD SYSTEM                             #####
 #####                                                                              #####
 #
 # Parameters that affect the initial system operation.
 #
 
 # IP address, hostname, or DNS
-#     The IP address or DNS name of where the Artik endpoint will service your users.
+#     The IP address or DNS name of where the e2cloud endpoint will service your users.
 #     If you are running this on a local system, we auto-detect this value as the IP
 #     address of your Docker daemon. On many systems, especially those from cloud hosters
 #     like DigitalOcean, you must explicitly set this to the external IP address or
 #     DNS entry provided by the provider. This value can be overridden on the command
-#     line with '-e ARTIK_HOST=<value>'.
-#ARTIK_HOST=localhost
+#     line with '-e E2CLOUD_HOST=<value>'.
+#E2CLOUD_HOST=localhost
 
 # Port
-#     The port on the host Artik will bind itself to. This value can be overridden on the 
-#     command line with '-e ARTIK_PORT=<value>'.
-#ARTIK_PORT=8080
+#     The port on the host e2cloud will bind itself to. This value can be overridden on the 
+#     command line with '-e E2CLOUD_PORT=<value>'.
+#E2CLOUD_PORT=8080
 
 # Proxies
 #     Che's internal services such as Java & curl need system properties applied 
