--- a/assembly/ide/samples/pom.xml
+++ b/assembly/ide/samples/pom.xml
@@ -7,18 +7,15 @@
     which accompanies this distribution, and is available at
     http://www.eclipse.org/legal/epl-v10.html
 
---><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+-->
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>assembly</artifactId>
+        <artifactId>che-ide-parent</artifactId>
         <groupId>com.renesas.e2cloud</groupId>
         <version>5.14.0</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>che-ide-parent</artifactId>
-    <packaging>pom</packaging>
-  <modules>
-    <module>samples</module>
-    <module>stacks</module>
-  </modules>
+    <artifactId>che-samples</artifactId>
 </project>
