--- a/assembly/ide/stacks/pom.xml
+++ b/assembly/ide/stacks/pom.xml
@@ -17,6 +17,5 @@
         <groupId>com.renesas.e2cloud</groupId>
         <version>5.14.0</version>
     </parent>
-    <artifactId>che-stacks-sample</artifactId>
-    <name>Stacks Sample :: IDE :: STACKS</name>
+    <artifactId>che-stacks</artifactId>
 </project>
