--- a/assembly/assembly-che/assembly-wsmaster-war/pom.xml
+++ b/assembly/assembly-che/assembly-wsmaster-war/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>com.renesas.e2cloud</groupId>
-            <artifactId>che-stacks-sample</artifactId>
+            <artifactId>che-stacks</artifactId>
         </dependency>
     </dependencies>
     <build>
