--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -35,6 +35,11 @@
         <dependencies>
             <dependency>
                 <groupId>com.renesas.e2cloud</groupId>
+                <artifactId>che-branding</artifactId>
+                <version>5.14.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.renesas.e2cloud</groupId>
                 <artifactId>che-samples</artifactId>
                 <version>5.14.0</version>
             </dependency>
